crates/lang/tests/ui/trait_def/fail/config_keep_attr_invalid_type.stderr
error: expected a string with attributes separated by `,`
 --> tests/ui/trait_def/fail/config_keep_attr_invalid_type.rs:3:25
  |
3 | #[ink::trait_definition(keep_attr = true)]
  |                         ^^^^^^^^^^^^^^^^
